volexc/tests/ui/recovery_message_multiple.vol
// Multiple errors in same message - recovery should report all
message Request {
    id: u32 = 1
    name: string = 2;
    count: u32 = 3
    data: string = 4;
}
